Improved underlying engine

--- a/Hoax-Framework/Hoax-Framework.csproj
+++ b/Hoax-Framework/Hoax-Framework.csproj
@@ -40,45 +40,52 @@
     <Reference Include="Mono.C5" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\Utils\ColorUtils.cs" />
-    <Compile Include="Common\Utils\Vector2Utils.cs" />
-    <Compile Include="Components\Graphics2D\Geometry.cs" />
-    <Compile Include="Components\Graphics2D\LayerDescription.cs" />
-    <Compile Include="Components\Graphics2D\Sprite.cs" />
-    <Compile Include="Components\Graphics2D\TileRegister.cs" />
-    <Compile Include="Components\Graphics2D\TileRenderer.cs" />
-    <Compile Include="Components\Graphics2D\Transformation2D.cs" />
-    <Compile Include="Components\Services\TagService.cs" />
-    <Compile Include="Components\StateMachine\ParallelAutomaton.cs" />
-    <Compile Include="Components\StateMachine\ParallelStateMachine.cs" />
-    <Compile Include="Core\BreathFirst.cs" />
-    <Compile Include="Core\ContentState.cs" />
-    <Compile Include="Core\CullingMode.cs" />
-    <Compile Include="Core\DephFirst.cs" />
-    <Compile Include="Core\Entity.cs" />
-    <Compile Include="Core\IReadOnlyGraph.cs" />
-    <Compile Include="Core\Node.cs" />
-    <Compile Include="Core\SceneGraph.cs" />
-    <Compile Include="Core\TraversalAlgorithm.cs" />
-    <Compile Include="Components\Graphics2D\Canvas.cs" />
-    <Compile Include="Components\Graphics2D\Graphics.cs" />
-    <Compile Include="Components\Graphics2D\Polygon2DOld.cs" />
-    <Compile Include="Components\Graphics2D\Polygon\Polygon2D.cs" />
-    <Compile Include="Components\Graphics2D\Polygon\SolidLinePolygon2D.cs" />
-    <Compile Include="Components\CollisionDetector.cs" />
-    <Compile Include="Components\CollisionDetectorEventArgs.cs" />
-    <Compile Include="Components\Diagnostics\FrameCounter.cs" />
-    <Compile Include="Components\Diagnostics\MethodTimeTracker.cs" />
-    <Compile Include="Components\DrawableBoundingBox.cs" />
-    <Compile Include="Components\Graphics2D\ProjectFixedEffect.cs" />
-    <Compile Include="Core\EmptyNode.cs" />
+    <Compile Include="ColorExtensions.cs" />
+    <Compile Include="Vector2Extensions.cs" />
+    <Compile Include="SpriteBatchExtensions.cs" />
+    <Compile Include="FrameCounter.cs" />
+    <Compile Include="MethodTimeTracker.cs" />
+    <Compile Include="Polygon2D.cs" />
+    <Compile Include="SolidLinePolygon2D.cs" />
+    <Compile Include="Canvas.cs" />
+    <Compile Include="Geometry.cs" />
+    <Compile Include="LayerDescription.cs" />
+    <Compile Include="ProjectFixedEffect.cs" />
+    <Compile Include="Sprite.cs" />
+    <Compile Include="TileRegister.cs" />
+    <Compile Include="TileRenderer.cs" />
+    <Compile Include="Transformation2D.cs" />
+    <Compile Include="TagService.cs" />
+    <Compile Include="CollisionDetector.cs" />
+    <Compile Include="CollisionDetectorEventArgs.cs" />
+    <Compile Include="DrawableBoundingBox.cs" />
+    <Compile Include="BreathFirst.cs" />
+    <Compile Include="ContentState.cs" />
+    <Compile Include="CullingMode.cs" />
+    <Compile Include="DephFirst.cs" />
+    <Compile Include="EmptyNode.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="IReadOnlyGraph.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="SceneGraph.cs" />
+    <Compile Include="TraversalAlgorithm.cs" />
+    <Compile Include="IGamePad.cs" />
+    <Compile Include="KeyboardGamePad.cs" />
+    <Compile Include="GamePadState.cs" />
+    <Compile Include="IGamePadThumbSticks.cs" />
+    <Compile Include="IGamePadButtons.cs" />
+    <Compile Include="IGamePadTriggers.cs" />
+    <Compile Include="GamePadTriggerKeyBinding.cs" />
+    <Compile Include="DirectionKeyBinding.cs" />
+    <Compile Include="GamePadButtonsKeyBinding.cs" />
+    <Compile Include="IGamePadDPad.cs" />
+    <Compile Include="KeyboardGamePadButtons.cs" />
+    <Compile Include="KeyboardGamePadDPad.cs" />
+    <Compile Include="KeyboardThumbSticks.cs" />
+    <Compile Include="KeyboardGamePadTriggers.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Components\Graphics2D\Polygon\" />
-    <Folder Include="Components\Diagnostics\" />
-    <Folder Include="Components\Graphics2D\SceneGraph\" />
-    <Folder Include="Components\Physics\" />
-    <Folder Include="Components\Physics\CollisionHandling\" />
-    <Folder Include="Components\Graphics2D\Canvas\" />
+    <Folder Include="Components\" />
+    <Folder Include="Components\Graphics2D\" />
   </ItemGroup>
 </Project>
